--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "deepmerge": "^4.2.2",
     "graphql": "^16.1.0",
+    "lodash.isequal": "^4.5.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/lodash.isequal": "^4.5.5",
     "@types/react": "17.0.37",
     "@types/styled-components": "^5.1.18",
     "eslint": "8.4.1",
